--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.13.2",
     "convict": "^6.2.3",
     "mongodb": "^4.7.0",
+    "nestjs-typeorm-paginate": "^4.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
